Fix spacing and row color

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -14,6 +14,7 @@
 
 .home {
   display: flex;
+  width: 100%;
   padding: 32px 32px 0px 32px;
   align-items: flex-start;
   gap: 32px;
@@ -22,9 +23,8 @@
 
 .home-inner {
   display: flex;
-  width: 1230px;
-  height: 1024px;
-  padding: 64px 64px 0px 32px;
+  width: 100%;
+  padding: 64px 32px 0px 32px;
   flex-direction: column;
   align-items: flex-start;
   gap: 32px;
